Finishes Backend for Uploads (#72)
